# nix-mini-workshop

./: .cspell.json  .gitignore  LICENSE  README.md  flake.nix  workshop.md
.cspell/: nix.txt  project.txt  python.txt
.github/workflows/: main.yml
examples/apps/: flake.nix  test.csv
examples/devShells/: flake.nix
solutions/ascii_art/: flake.nix
solutions/matplotlib/: flake.nix  pyproject.toml
solutions/matplotlib/interference_pattern/: __init__.py  main.py  plot.py
solutions/opencv/: flake.nix  video_filter.py
solutions/pygame/: flake.nix  game.py
solutions/python/: flake.nix
test-flake/: flake.nix
